Untitled1.ipynb update

--- a/note/m_fishmodel.ipynb
+++ b/note/m_fishmodel.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "1ca3cd3a-ac78-4eae-afe9-528c1a851863",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.]\n"
+      "['빙어']\n"
      ]
     }
    ],
@@ -458,7 +458,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
+   "id": "f749e77d-851f-4b24-b88b-60a5b65a384f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a1191ef5-f79f-430a-9262-078be0095636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def firstfitandpredict():\n",
+    "    # 데이터 초기화\n",
+    "    fish_data = []\n",
+    "    fish_target = []\n",
+    "\n",
+    "    # KNN 모델 초기화\n",
+    "    neighbors = 5\n",
+    "    kn = KNeighborsClassifier(n_neighbors=neighbors)\n",
+    "\n",
+    "    # 초기 데이터 입력받기\n",
+    "    length = float(input(\"물고기의 길이를 입력하세요: \"))\n",
+    "    weight = float(input(\"물고기의 무게를 입력하세요: \"))\n",
+    "\n",
+    "    # 초기 정답 설정\n",
+    "    if length + weight > 30:\n",
+    "        answer = '도미'\n",
+    "    else:\n",
+    "        answer = '빙어'\n",
+    "    print(f\"이 녀석은 바로 {answer}\")\n",
+    "\n",
+    "    # 정답 입력받기\n",
+    "    answer = input(\"정답을 입력하세요: \")\n",
+    "\n",
+    "    for n in range(neighbors):\n",
+    "        # 초기 데이터 추가\n",
+    "        fish_data.append([length, weight])\n",
+    "        fish_target.append(answer)\n",
+    "\n",
+    "    # 모델 학습\n",
+    "    kn.fit(fish_data, fish_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3c10efcb-2467-4d68-98a7-fb9009057362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fitandpredict():\n",
+    "    length = float(input(\"물고기의 길이를 입력하세요: \"))\n",
+    "    weight = float(input(\"물고기의 무게를 입력하세요: \"))\n",
+    "    \n",
+    "    # 입력받은 데이터를 예측\n",
+    "    predict = kn.predict([[length, weight]])[0]\n",
+    "    \n",
+    "    print(f\"이 녀석은 바로 {predict}\")\n",
+    "    \n",
+    "    # 정답 입력받기\n",
+    "    answer = input(\"정답을 입력하세요: \")\n",
+    "    \n",
+    "    # 새로운 데이터 추가\n",
+    "    fish_data.append([float(length), float(weight)])\n",
+    "    fish_target.append(answer)\n",
+    "\n",
+    "    # 모델 다시 학습\n",
+    "    kn.fit(fish_data, fish_target)\n",
+    "    finish = input(\"나가기를 원하면 exit를 입력하세요\")\n",
+    "    if finish == \"exit\":\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "b50e2cf0-ce00-4fcc-9485-290396d478be",
    "metadata": {},
    "outputs": [
@@ -466,8 +546,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "물고기의 길이를 입력하세요:  4\n",
-      "물고기의 무게를 입력하세요:  4\n"
+      "물고기의 길이를 입력하세요:  3\n",
+      "물고기의 무게를 입력하세요:  3\n"
      ]
     },
     {
@@ -481,75 +561,29 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "물고기의 길이를 입력하세요:  4\n",
-      "물고기의 무게를 입력하세요:  4\n"
+      "정답을 입력하세요:  7\n",
+      "물고기의 길이를 입력하세요:  9\n",
+      "물고기의 무게를 입력하세요:  exit\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "Expected n_neighbors <= n_samples,  but n_samples = 1, n_neighbors = 5",
+     "evalue": "could not convert string to float: 'exit'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 38\u001b[0m\n\u001b[1;32m     35\u001b[0m weight \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m물고기의 무게를 입력하세요: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# 입력받은 데이터를 예측\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m predict \u001b[38;5;241m=\u001b[39m \u001b[43mkn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlength\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m이 녀석은 바로 \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpredict\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# 정답 입력받기\u001b[39;00m\n",
-      "File \u001b[0;32m~/code/finshmlserv/.venv/lib/python3.8/site-packages/sklearn/neighbors/_classification.py:266\u001b[0m, in \u001b[0;36mKNeighborsClassifier.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    263\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclasses_[np\u001b[38;5;241m.\u001b[39margmax(probabilities, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)]\n\u001b[1;32m    264\u001b[0m     \u001b[38;5;66;03m# In that case, we do not need the distances to perform\u001b[39;00m\n\u001b[1;32m    265\u001b[0m     \u001b[38;5;66;03m# the weighting so we do not compute them.\u001b[39;00m\n\u001b[0;32m--> 266\u001b[0m     neigh_ind \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkneighbors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_distance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    267\u001b[0m     neigh_dist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    268\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/code/finshmlserv/.venv/lib/python3.8/site-packages/sklearn/neighbors/_base.py:808\u001b[0m, in \u001b[0;36mKNeighborsMixin.kneighbors\u001b[0;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    806\u001b[0m n_samples_fit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_samples_fit_\n\u001b[1;32m    807\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n_neighbors \u001b[38;5;241m>\u001b[39m n_samples_fit:\n\u001b[0;32m--> 808\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    809\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected n_neighbors <= n_samples, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    810\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m but n_samples = \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m, n_neighbors = \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (n_samples_fit, n_neighbors)\n\u001b[1;32m    811\u001b[0m     )\n\u001b[1;32m    813\u001b[0m n_jobs \u001b[38;5;241m=\u001b[39m effective_n_jobs(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs)\n\u001b[1;32m    814\u001b[0m chunked_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected n_neighbors <= n_samples,  but n_samples = 1, n_neighbors = 5"
+      "Cell \u001b[0;32mIn[53], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# 반복적으로 입력받기\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m----> 4\u001b[0m     \u001b[43mfitandpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[52], line 3\u001b[0m, in \u001b[0;36mfitandpredict\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfitandpredict\u001b[39m():\n\u001b[1;32m      2\u001b[0m     length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m물고기의 길이를 입력하세요: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m----> 3\u001b[0m     weight \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m물고기의 무게를 입력하세요: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m# 입력받은 데이터를 예측\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     predict \u001b[38;5;241m=\u001b[39m kn\u001b[38;5;241m.\u001b[39mpredict([[length, weight]])[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'exit'"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# 데이터 초기화\n",
-    "fish_data = []\n",
-    "fish_target = []\n",
-    "\n",
-    "# 초기 데이터 입력받기\n",
-    "length = float(input(\"물고기의 길이를 입력하세요: \"))\n",
-    "weight = float(input(\"물고기의 무게를 입력하세요: \"))\n",
-    "\n",
-    "# 초기 정답 설정\n",
-    "if length + weight > 30:\n",
-    "    answer = '도미'\n",
-    "else:\n",
-    "    answer = '빙어'\n",
-    "\n",
-    "# 초기 데이터 추가\n",
-    "fish_data.append([length, weight])\n",
-    "fish_target.append(answer)\n",
-    "\n",
-    "# KNN 모델 초기화\n",
-    "neighbors = 5\n",
-    "kn = KNeighborsClassifier(n_neighbors=neighbors)\n",
-    "\n",
-    "# 모델 학습\n",
-    "kn.fit(fish_data, fish_target)\n",
-    "\n",
-    "print(f\"이 녀석은 바로 {answer}\")\n",
-    "\n",
+    "firstfitandpredict()\n",
     "# 반복적으로 입력받기\n",
     "while True:\n",
-    "    # 새로운 물고기의 길이와 무게 입력받기\n",
-    "    length = float(input(\"물고기의 길이를 입력하세요: \"))\n",
-    "    weight = float(input(\"물고기의 무게를 입력하세요: \"))\n",
-    "    \n",
-    "    # 입력받은 데이터를 예측\n",
-    "    predict = kn.predict([[length, weight]])\n",
-    "    \n",
-    "    print(f\"이 녀석은 바로 {predict}\")\n",
-    "    \n",
-    "    # 정답 입력받기\n",
-    "    answer = input(\"정답을 입력하세요: \")\n",
-    "    \n",
-    "    # 새로운 데이터 추가\n",
-    "    fish_data.append([float(length), float(weight)])\n",
-    "    fish_target.append(answer)\n",
-    "\n",
-    "    # 모델 다시 학습\n",
-    "    kn.fit(fish_data, fish_target)"
+    "    fitandpredict()"
    ]
   },
   {
